Adjust right margin to avoid whitespace

--- a/less/_responsive.less
+++ b/less/_responsive.less
@@ -14,7 +14,7 @@
 	.entry-summary,
 	.comment-links,
 	.comments-area {
-		margin: 0 20.5% 0 0;
+		margin: 0 20.4% 0 0;
 	}
 	.sidebar-classic {
 		.content-area {
