--- a/style.css
+++ b/style.css
@@ -2850,7 +2850,7 @@ li.comment li.comment .comment-avatar img {
   .entry-summary,
   .comment-links,
   .comments-area {
-    margin: 0 20.5% 0 0;
+    margin: 0 20.4% 0 0;
   }
   .sidebar-classic .content-area {
     float: left;
